--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -24,7 +24,7 @@
         android:id="@+id/buttonMPH"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MultiPlayer (Host)"
+        android:text="MultiPlayer"
         android:textColor="@color/black"
         app:backgroundTint="#ff6600"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,20 +33,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.702" />
-
-    <Button
-        android:id="@+id/buttonMPP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MultiPlayer (Player)"
-        android:textColor="@color/black"
-        app:backgroundTint="#ff6600"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.819" />
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -65,8 +51,7 @@
         android:id="@+id/textViewInstructions"
         android:layout_width="279dp"
         android:layout_height="120dp"
-        android:text="Instructions: Click SINGLEPLAYER to play against a computer.\n\nTo play in a group, have one player
-click on MULTIPLAYER (HOST) while all the other players click on MULTIPLAYER (SINGLE)."
+        android:text="Instructions: Click SINGLEPLAYER to play against a computer.\n\nTo play in a group, have all players click the MULTIPLAYER button."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
